# fuzz

./: .gitignore  Makefile  README.md  TODO  meson.build
doc/: forking.md  glossary.md  hooks.md  shrinking.md  usage.md
inc/: theft.h  theft_types.h
src/: autoshrink.c  autoshrink.h  aux.c  aux_builtin.c  bloom.c  bloom.h  call.c  call.h  fuzz.c  fuzz.h  hash.c  poll_windows.c  poll_windows.h  polyfill.c  polyfill.h  random.c  random.h  rng.c  rng.h  run.c  run.h  shrink.c  shrink.h  theft.c  theft_autoshrink.c  theft_autoshrink.h  theft_autoshrink_internal.h  theft_aux.c  theft_aux_builtin.c  theft_bloom.c  theft_bloom.h  theft_call.c  theft_call.h  theft_call_internal.h  theft_hash.c  theft_random.c  theft_random.h  theft_rng.c  theft_rng.h  theft_run.c  (+12 more)
test/: meson.build  test_char_array.c  test_fuzz.c  test_fuzz_autoshrink.c  test_fuzz_autoshrink_bulk.c  test_fuzz_autoshrink_bulk.h  test_fuzz_autoshrink_int_array.c  test_fuzz_autoshrink_int_array.h  test_fuzz_autoshrink_ll.c  test_fuzz_autoshrink_ll.h  test_fuzz_aux.c  test_fuzz_bloom.c  test_fuzz_error.c  test_fuzz_integration.c  test_fuzz_no_fork.c  test_fuzz_prng.c  test_theft.c  test_theft.h  test_theft_autoshrink.c  test_theft_autoshrink_bulk.c  test_theft_autoshrink_bulk.h  test_theft_autoshrink_int_array.c  test_theft_autoshrink_int_array.h  test_theft_autoshrink_ll.c  test_theft_autoshrink_ll.h  test_theft_aux.c  test_theft_bloom.c  test_theft_error.c  test_theft_integration.c  test_theft_no_fork.c  test_theft_prng.c
tools/: amalgamate.c
